--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -24,7 +24,25 @@
     "paths": {
       "src/*": [
         "./src/*"
-      ]
+      ],
+      "@hooks/*": [
+        "./src/hooks/*"
+      ],
+      "@components/*": [
+        "./src/components/*"
+      ],
+      "@utils/*": [
+        "./src/utils/*"
+      ],
+      "@containers/*": [
+        "./src/containers/*"
+      ],
+      "@pages/*": [
+        "./src/pages/*"
+      ],
+      "@layouts/*": [
+        "./src/layouts/*"
+      ],
     },
     "strict": true,
     "noUnusedLocals": true,
