chages in folder structure

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -28,8 +28,8 @@
       "@hooks/*": [
         "./src/hooks/*"
       ],
-      "@components/*": [
-        "./src/components/*"
+      "@modules/*": [
+        "./src/modules/*"
       ],
       "@utils/*": [
         "./src/utils/*"
