--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -3,10 +3,10 @@
     "sourceMap": true,
     "incremental": true,
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.app.tsbuildinfo",
-    "target": "es2022",
+    "target": "ES2023",
     "useDefineForClassFields": true,
     "lib": [
-      "es2022",
+      "ES2023",
       "DOM",
       "DOM.Iterable"
     ],
