Fixed Routing and Initialized Units Converter Production

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -43,6 +43,9 @@
       "@layouts/*": [
         "./src/layouts/*"
       ],
+      "@constants/*": [
+        "./src/constants/*"
+      ],
       "src/*": [
         "./src/*"
       ],
