--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "lucide-react": "^0.457.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.28.0",
-    "uuid": "^11.0.3"
+    "react-router-dom": "^6.28.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
